--- a/.github/workflows/add-comment-to-issue.yml
+++ b/.github/workflows/add-comment-to-issue.yml
@@ -1,9 +1,10 @@
+---
 # SPDX-FileCopyrightText: GitHub, Inc. and contributors
 # SPDX-License-Identifier: MIT
 
 name: Issue Label Comment
 
-on:
+on: # yamllint disable-line rule:truthy
   issues:
     types: [labeled]
 
