--- a/.github/workflows/add-label-to-issue.yml
+++ b/.github/workflows/add-label-to-issue.yml
@@ -1,9 +1,10 @@
+---
 # SPDX-FileCopyrightText: GitHub, Inc. and contributors
 # SPDX-License-Identifier: MIT
 
 name: Issue Auto-Labeler
 
-on:
+on: # yamllint disable-line rule:truthy
   issues:
     types: [opened, reopened]
 
