--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,10 +12,10 @@
 image: python:3.11-slim
 
 variables:
-  PIP_CACHE_DIR: '$CI_PROJECT_DIR/.pip-cache'
-  PRE_COMMIT_HOME: '$CI_PROJECT_DIR/.cache/pre-commit'
-  PYTHONPATH: '$CI_PROJECT_DIR/src'
-  HATCH_ENV_TYPE_VIRTUAL_PATH: '$CI_PROJECT_DIR/.venv'
+  PIP_CACHE_DIR: $CI_PROJECT_DIR/.pip-cache
+  PRE_COMMIT_HOME: $CI_PROJECT_DIR/.cache/pre-commit
+  PYTHONPATH: $CI_PROJECT_DIR/src
+  HATCH_ENV_TYPE_VIRTUAL_PATH: $CI_PROJECT_DIR/.venv
 
 # Define cache for pip and pre-commit
 cache:
