--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -26,5 +26,8 @@
 		"**/.project": true,
 		"**/.settings": true
 	},
-	"explorerExclude.backup": {}
+	"explorerExclude.backup": {},
+	"cSpell.words": [
+		"JMBDE"
+	]
 }
