--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,12 @@
-# SPDX-FileCopyRightText: 2023 Jürgen Mülbert <juergen.muelbert@web.de>
+# SPDX-FileCopyRightText: 2023-2024 Jürgen Mülbert <juergen.muelbert@web.de>
 #
 # SPDX-License-Identifier: EUPL-1.2
+#
 # Docker configuration file for ignoring paths while collecting context.
 #
 # For more information, visit
 # https://codefresh.io/docker-tutorial/not-ignore-dockerignore-2/.
-
+#
 # Git
 .git
 .gitignore
