--- a/.editorconfig
+++ b/.editorconfig
@@ -1,3 +1,7 @@
+---
+# SPDX-License-Identifier: EUPL-1.2
+# SPDX-FileCopyrightText: 2023-2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
+#
 # Top-most EditorConfig file
 root = true
 
