--- a/.github/release-drafter.yml
+++ b/.github/release-drafter.yml
@@ -1,48 +1,52 @@
 ---
-name-template: 'v$RESOLVED_VERSION'
-tag-template: 'v$RESOLVED_VERSION'
+# SPDX-License-Identifier: EUPL-1.2
+# SPDX-FileCopyrightText: 2024 Jürgen Mülbert <juergen.muelbert@outlook.de>
+#
+# Release Drafter Configuration
+name-template: v$RESOLVED_VERSION
+tag-template: v$RESOLVED_VERSION
 categories:
-  - title: '🚀 Features'
+  - title: 🚀 Features
     labels:
-      - 'feature'
-      - 'enhancement'
-  - title: '🐛 Bug Fixes'
+      - feature
+      - enhancement
+  - title: 🐛 Bug Fixes
     labels:
-      - 'fix'
-      - 'bug'
-  - title: '🔒 Security'
+      - fix
+      - bug
+  - title: 🔒 Security
     labels:
-      - 'security'
-  - title: '⚡ Performance'
+      - security
+  - title: ⚡ Performance
     labels:
-      - 'performance'
-  - title: '📚 Documentation'
+      - performance
+  - title: 📚 Documentation
     labels:
-      - 'documentation'
-  - title: '🔧 Maintenance'
+      - documentation
+  - title: 🔧 Maintenance
     labels:
-      - 'maintenance'
-      - 'chore'
+      - maintenance
+      - chore
 
 change-template: '- $TITLE @$AUTHOR (#$NUMBER)'
 
 version-resolver:
   major:
     labels:
-      - "type: breaking"
+      - type: breaking
   minor:
     labels:
-      - "type: feature"
+      - type: feature
   patch:
     labels:
-      - "type: bug"
-      - "type: maintenance"
-      - "type: docs"
-      - "type: dependencies"
-      - "type: security"
+      - type: bug
+      - type: maintenance
+      - type: docs
+      - type: dependencies
+      - type: security
 
 exclude-labels:
-  - "skip-changelog"
+  - skip-changelog
 
 template: |
   ## What's Changed
@@ -61,16 +65,16 @@ template: |
   ```
   **Full Changelog**: https://github.com/$OWNER/$REPOSITORY/compare/$PREVIOUS_TAG...v$RESOLVED_VERSION
 
-no-changes-template: 'No changes included in this release'
+no-changes-template: No changes included in this release
 
 autolabeler:
-  - label: 'documentation'
+  - label: documentation
     files:
       - '*.md'
-      - 'docs/*'
-  - label: 'bug'
+      - docs/*
+  - label: bug
     branch:
-      - '/fix\/.+/'
-  - label: 'feature'
+      - /fix\/.+/
+  - label: feature
     branch:
-      - '/feat\/.+/'
+      - /feat\/.+/
