--- a/.github/workflows/add-issue-header.yml
+++ b/.github/workflows/add-issue-header.yml
@@ -1,9 +1,10 @@
+---
 # SPDX-FileCopyrightText: GitHub, Inc. and contributors
 # SPDX-License-Identifier: MIT
 
 name: Issue Header Automation
 
-on:
+on: # yamllint disable-line rule:truthy
   issues:
     types: [opened, labeled]
 
