--- a/.github/workflows/labeler.yml
+++ b/.github/workflows/labeler.yml
@@ -4,7 +4,7 @@
 
 name: Pull Request Labeler
 
-on:
+on: # yamllint disable-line rule:truthy
   pull_request:
     types: [opened, edited, synchronize, reopened, ready_for_review]
   pull_request_target:
@@ -63,15 +63,15 @@ jobs:
         uses: codelytv/pr-size-labeler@56f6f0fc35c7cc0f72963b8467729e1120cb4bed # v1.10.0
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          xs_label: 'size/xs'
+          xs_label: size/xs
           xs_max_size: '10'
-          s_label: 'size/s'
+          s_label: size/s
           s_max_size: '100'
-          m_label: 'size/m'
+          m_label: size/m
           m_max_size: '500'
-          l_label: 'size/l'
+          l_label: size/l
           l_max_size: '1000'
-          xl_label: 'size/xl'
+          xl_label: size/xl
           fail_if_xl: false
           message_if_xl: |
             ⚠️ This PR is quite large (exceeds 1000 lines). Please consider:
