--- a/.github/workflows/mega-linter.yml
+++ b/.github/workflows/mega-linter.yml
@@ -1,24 +1,36 @@
 ---
-  name: MegaLinter
-  on:
-    push: null
-    pull_request:
-      types:
-        - opened
-        - synchronize
-        - reopened
-        - labeled
-      paths-ignore:
-        - "**.md"
-        - docs/**
-        - LICENSE
-        - LICENSES/**
-  permissions:
-    contents: read
-  concurrency:
-    group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
-    cancel-in-progress: true
-  jobs:
+# SPDX-License-Identifier: MIT
+
+name: MegaLinter
+
+on: # yamllint disable-line rule:truthy
+  push:
+    paths-ignore:
+      - "**.md"
+      - docs/**
+      - LICENSE
+      - LICENSES/**
+
+  pull_request:
+    types:
+      - opened
+      - synchronize
+      - reopened
+      - labeled
+    paths-ignore:
+      - "**.md"
+      - docs/**
+      - LICENSE
+      - LICENSES/**
+
+permissions:
+  contents: read
+
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.sha }}
+  cancel-in-progress: true
+
+jobs:
     megalinter:
       name: Code Quality Check
       if: github.actor != 'dependabot[bot]'
@@ -35,22 +47,27 @@
         APPLY_FIXES: all
         APPLY_FIXES_EVENT: pull_request
         APPLY_FIXES_MODE: commit
+
       steps:
         - name: 🔒 Harden Runner
           uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142
           with:
             egress-policy: audit
+
         - name: 🧰 Checkout Repository
           uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
           with:
+            # TODO: #1180 add SECRET_NAME to store the PAT
             token: ${{ secrets.PAT || secrets.GITHUB_TOKEN }}
             fetch-depth: 0
+
         - name: 🧪 Run MegaLinter
           uses: oxsecurity/megalinter@1fc052d03c7a43c78fe0fee19c9d648b749e0c01
           id: ml
           env:
             VALIDATE_ALL_CODEBASE: true
             GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
         - name: 📤 Upload Artifacts
           if: success() || failure()
           uses: actions/upload-artifact@0b2256b8c012f0828dc542b3febcab082c67f72b
@@ -60,13 +77,13 @@
               megalinter-reports/
               mega-linter.log
             retention-days: 7
+
         - name: 📊 Process Results
           if: always()
           uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
           with:
             script: >
               const fs = require('fs');
-
 
               try {
                 const report = JSON.parse(fs.readFileSync('megalinter-reports/megalinter-report.json', 'utf8'));
@@ -101,6 +118,7 @@
               } catch (error) {
                 console.error('Error processing results:', error);
               }
+
         - name: 📝 Create Fix PR
           if: steps.ml.outputs.has_updated_sources == 1
           uses: peter-evans/create-pull-request@c5a7806660adbe173f04e3e038b0ccdcd758773c
@@ -122,6 +140,7 @@
               automated-pr
               style
             draft: false
+
         - name: 🏷️ Update PR Labels
           if: success() && github.event_name == 'pull_request'
           uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
@@ -139,16 +158,7 @@
               issue_number: context.payload.pull_request.number,
               labels: labels
               });
-        - name: Prepare commit
-          if: >-
-            steps.ml.outputs.has_updated_sources == 1 && (
-              env.APPLY_FIXES_EVENT == 'all' ||
-              env.APPLY_FIXES_EVENT == github.event_name
-            ) && env.APPLY_FIXES_MODE == 'commit' && github.ref != 'refs/heads/main' && (
-              github.event_name == 'push' ||
-              github.event.pull_request.head.repo.full_name == github.repository
-            ) && !contains(github.event.head_commit.message, 'skip fix')
-          run: sudo chown -Rc $UID .git/
+
         - name: 🚨 Check Failure
           if: failure()
           uses: actions/github-script@60a0d83039c74a4aee543508d2ffcb1c3799cdea
@@ -157,7 +167,6 @@
               const message = `❌ MegaLinter checks failed. Please review the [workflow
               logs](${process.env.GITHUB_SERVER_URL}/${process.env.GITHUB_REPOSITORY}/actions/runs/${process.env.GITHUB_RUN_ID})
               for details.`;
-
 
               await github.rest.issues.createComment({
                 ...context.repo,
