--- a/.github/workflows/reuse-check.yml
+++ b/.github/workflows/reuse-check.yml
@@ -1,26 +1,27 @@
+---
 # SPDX-FileCopyrightText: Free Software Foundation Europe
 # SPDX-License-Identifier: GPL-3.0-or-later
 
 name: License Compliance Check
 
-on:
+on: # yamlint disable-line rule:truthy
   push:
     branches:
       - main
       - develop
-      - 'release/**'
-      - 'resolve-**'
+      - release/**
+      - resolve-**
     paths-ignore:
       - '**.md'
-      - 'docs/**'
-      - '.github/*.md'
+      - docs/**
+      - .github/*.md
 
   pull_request:
     types: [opened, reopened, synchronize]
     paths-ignore:
       - '**.md'
-      - 'docs/**'
-      - '.github/*.md'
+      - docs/**
+      - .github/*.md
 
   workflow_dispatch:
 
@@ -62,9 +63,9 @@ jobs:
       - name: ⚙️ Setup Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version-file: '.python-version' # Read python version from a file .python-version
+          python-version-file: .python-version # Read python version from a file .python-version
           check-latest: true
-          cache: 'pip'
+          cache: pip
           cache-dependency-path: '**/pyproject.toml'
 
       - name: 🛠️ Install REUSE Tool
