--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,25 +4,28 @@
 
 name: Test Suite
 
-on:
+on: # yamlint disable-line rule:truthy
   push:
     branches:
       - main
       - develop
-      - 'release/**'
-      - 'resolve-**'
+      - release/**
+      - resolve-**
     paths-ignore:
       - '**.md'
-      - 'docs/**'
-      - '.github/*.md'
-      - 'LICENSE'
+      - docs/**
+      - .github/*.md
+      - LICENSE
+      - LICENSES/**
 
   pull_request:
     types: [opened, synchronize, reopened]
     paths-ignore:
       - '**.md'
-      - 'docs/**'
-      - '.github/*.md'
+      - docs/**
+      - .github/*.md
+      - LICENSE
+      - LICENSES/**
 
   workflow_dispatch:
 
@@ -69,8 +72,8 @@ jobs:
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
           python-version: ${{ matrix.python-version }}
-          cache: 'pip'
-          cache-dependency-path: 'pyproject.toml'
+          cache: pip
+          cache-dependency-path: pyproject.toml
           check-latest: true
 
       - name: 📦 Setup Cache
@@ -89,11 +92,6 @@ jobs:
           python -m pip install --upgrade pip
           pip install hatch
           hatch env create
-
-      - name: 🔍 Run Linting
-        run: |
-          hatch run lint:style
-          hatch run lint:typing
 
       - name: 🧪 Run Tests
         run: hatch run test:cov
@@ -130,6 +128,41 @@ jobs:
             test-reports/
           retention-days: 7
 
+  lint:
+    name: Linters
+    runs-on: ubuntu-latest
+    timeout-minutes: 15
+    needs: test
+
+    permissions:
+      security-events: write
+
+    steps:
+      - name: 🔒 Harden Runner
+        uses: step-security/harden-runner@63c24ba6bd7ba022e95695ff85de572c04a18142 # v2.7.0
+        with:
+          egress-policy: audit
+
+      - name: 🧰 Checkout Repository
+        uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
+
+      - name: ⚙️ Setup Python
+        uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
+        with:
+          python-version: .python-version
+          cache: pip
+
+      - name: 🛠️ Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install hatch
+
+      - name: 🔍 Run Linter
+        run: |
+          hatch fmt --check
+          hatch run lint:style
+          hatch run lint:typing
+
   security:
     name: Security Analysis
     runs-on: ubuntu-latest
@@ -151,8 +184,8 @@ jobs:
       - name: ⚙️ Setup Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: .python-version
+          cache: pip
 
       - name: 🛠️ Install Dependencies
         run: |
@@ -186,8 +219,8 @@ jobs:
       - name: ⚙️ Setup Python
         uses: actions/setup-python@0b93645e9fea7318ecaed2b359559ac225c90a2b # v5.3.0
         with:
-          python-version: '3.11'
-          cache: 'pip'
+          python-version: .python-version
+          cache: pip
 
       - name: 🛠️ Build Documentation
         run: |
