--- a/.github/workflows/misspell-fixer.yml
+++ b/.github/workflows/misspell-fixer.yml
@@ -1,15 +1,16 @@
+---
 # SPDX-FileCopyrightText: Jürgen Mülbert
 # SPDX-License-Identifier: MIT
 
 name: Multi-Language Spell Check
 
-on:
+on: # yamllint disable-line rule:truthy
   push:
     branches:
       - main
       - develop
-      - 'release/**'
-      - 'resolve-**'
+      - release/**
+      - resolve-**
     paths-ignore:
       - '**/*.svg'
       - '**/*.png'
@@ -69,9 +70,11 @@ jobs:
 
       - name: 🔍 Install Node and pnpm
         uses: actions/setup-node@39370e3970a6d050c480ffad4ff0ed4d3fdee5af # v4.1.0
-          with:
-            node-version: 20
-            cache: 'npm'
+        with:
+          node-version: 20
+          cache: npm
+
+      - name: 🔍 Install pnpm and packages
         run: |
           npm install -g pnpm
           pnpm install
@@ -85,8 +88,8 @@ jobs:
         id: misspell
         uses: sobolevn/misspell-fixer-action@8842a5615f83fed75e8a87015e9300a54d049961 # master
         with:
-          options: '-rsvn'
-          ignore: 'node_modules/,dist/,build/,*.min.js,*.min.css'
+          options: -rsvn
+          ignore: node_modules/,dist/,build/,*.min.js,*.min.css
 
       - name: ✍️ Check for Changes
         id: check-diff
