--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -10,6 +10,7 @@ ignore:
   - repo/
   - .github/styles/vale/**/*.yml
   - .github/styles/vale/**/*.yaml
+  - pnpm-lock.yaml
 
 rules:
   braces:
@@ -48,5 +49,6 @@ rules:
 
   octal-values:
     forbid-implicit-octal: true # Forbid implicit octal values
+
 
     # Additional rules can be added here
